edit login view

--- a/QuickSale/LoginVC/SignupView.xib
+++ b/QuickSale/LoginVC/SignupView.xib
@@ -37,7 +37,7 @@
                     </constraints>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <textInputTraits key="textInputTraits" returnKeyType="continue" textContentType="email"/>
+                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" textContentType="email"/>
                 </textField>
                 <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rtn-5B-vQb">
                     <rect key="frame" x="0.0" y="96" width="343" height="30"/>
